Updates and fixes for lavaplayer